--- a/package.json
+++ b/package.json
@@ -19,7 +19,7 @@
     "test:backend": "cd backend && pytest"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2"
+    "concurrently": "8.2.2"
   },
   "engines": {
     "node": ">=18.0.0",
