feat: LangGraph移行プロジェクトの基盤整備
- ドキュメント整備（移行概要、チーム担当者一覧、ブランチ戦略等）
- バックエンド基盤の構築（ディレクトリ構造、共通ユーティリティ、型定義）
- テスト環境のセットアップ（pytest設定、テストフィクスチャ）
- CI/CDパイプラインの設定（GitHub Actions）
- 実装例とサンプルコードの追加
- 参考リポジトリ（langgraph-reference）の追加
- オンボーディングガイドの作成

Refs: #移行プロジェクト開始

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,14 +1,90 @@
-# OpenAI API
-OPENAI_API_KEY=your_openai_api_key
+# Engineer Cafe Navigator Backend - 環境変数テンプレート
 
-# Google Gemini API
-GOOGLE_API_KEY=your_google_api_key
+# ============================================
+# AI API Keys
+# ============================================
 
-# Supabase
-SUPABASE_URL=your_supabase_url
-SUPABASE_KEY=your_supabase_key
+# OpenAI API (埋め込みベクトル用)
+OPENAI_API_KEY=your_openai_api_key_here
 
-# 環境設定
+# Google Gemini API (応答生成用)
+GOOGLE_API_KEY=your_google_api_key_here
+
+# Anthropic Claude API (オプション)
+ANTHROPIC_API_KEY=your_anthropic_api_key_here
+
+# ============================================
+# Database (Supabase)
+# ============================================
+
+SUPABASE_URL=https://your-project.supabase.co
+SUPABASE_KEY=your_supabase_anon_key_here
+SUPABASE_SERVICE_ROLE_KEY=your_supabase_service_role_key_here
+
+# PostgreSQL接続文字列（チェックポインター用）
+POSTGRES_CONNECTION_STRING=postgresql://user:password@localhost:5432/dbname
+
+# ============================================
+# Environment
+# ============================================
+
 ENVIRONMENT=development
-PORT=8000
+DEBUG=true
+LOG_LEVEL=INFO
 
+# ============================================
+# API Configuration
+# ============================================
+
+API_HOST=0.0.0.0
+API_PORT=8000
+CORS_ORIGINS=http://localhost:3000,http://localhost:3001
+
+# ============================================
+# OCR Configuration (新規機能)
+# ============================================
+
+# Tesseract OCR (オプション)
+TESSERACT_CMD=/usr/local/bin/tesseract
+
+# Google Vision API (オプション)
+GOOGLE_VISION_API_KEY=your_google_vision_api_key_here
+
+# EasyOCR (オプション - デフォルトで使用可能)
+# 追加設定不要
+
+# ============================================
+# Memory & RAG Configuration
+# ============================================
+
+# メモリーTTL（秒）
+MEMORY_TTL=180
+
+# RAG検索の最大結果数
+RAG_MAX_RESULTS=5
+
+# RAG検索の類似度閾値
+RAG_SIMILARITY_THRESHOLD=0.7
+
+# ============================================
+# LangSmith (デバッグ・モニタリング)
+# ============================================
+
+LANGCHAIN_TRACING_V2=true
+LANGCHAIN_ENDPOINT=https://api.smith.langchain.com
+LANGCHAIN_API_KEY=your_langsmith_api_key_here
+LANGCHAIN_PROJECT=engineer-cafe-navigator
+
+# ============================================
+# External Services
+# ============================================
+
+# Google Calendar API (イベント管理用)
+GOOGLE_CALENDAR_ICAL_URL=https://calendar.google.com/calendar/ical/...
+
+# ============================================
+# Security
+# ============================================
+
+# API認証トークン（オプション）
+API_SECRET_KEY=your_secret_key_here
