--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -12,6 +12,7 @@ langchain = "^0.3.0"
 langchain-openai = "^0.2.0"
 langchain-google-genai = "^2.0.0"
 pydantic = "^2.0.0"
+pydantic-settings = "^2.0.0"
 fastapi = "^0.115.0"
 uvicorn = {extras = ["standard"], version = "^0.30.0"}
 python-dotenv = "^1.0.0"
